--- a/styles/search.css
+++ b/styles/search.css
@@ -41,7 +41,7 @@ body            {       height: 100vh;
 
 /*  Navigation  */
 
-.nav            {       height: 3.5em;       
+.nav            {       height: 4em;       
                         /* width: 100%; */
 
                         justify-content: center;
@@ -49,10 +49,23 @@ body            {       height: 100vh;
                         background-color: silver;       }
 
 
-/* .nav li         {       display: flex;
+.nav ul         {       margin: 0;                           
 
-                        flex-direction: row;              } */
+                        padding: 0 ;                      }
 
+
+.nav li         {       display: flex;
+
+                        flex-direction: row;             
+
+                        margin: 0;                           
+
+                        padding: 0 ;                      }
+
+
+.nav li a       {       color: black;                   }
+.nav li a:hover
+                {       color: black;                   }
 
 
 
