--- a/styles/search.css
+++ b/styles/search.css
@@ -12,7 +12,7 @@
 
 
 
-*               {       box-sizing: border-box;       }
+*               {       box-sizing: border-box;         }
 
 
 
@@ -26,10 +26,10 @@ body            {       height: 100vh;
 
                         margin: 0;
 
-                        background-color: white;    }
+                        background-color: white;        }
 
 
-
+p               {       margin: 0;                        }
 
 
 
@@ -45,6 +45,8 @@ body            {       height: 100vh;
                         /* width: 100%; */
 
                         justify-content: center;
+
+                        border-bottom: 1px solid whitesmoke;
 
                         background-color: silver;       }
 
@@ -70,16 +72,31 @@ body            {       height: 100vh;
 
 
 
+
+
+/*  Google Banner  */
+
+.title          {       font-size: 20px;
+                        font-family: Arial,sans-serif;
+
+                        color: #f28b82;                 }
+
+
+
+
+
+
+
 /*  Google Image  */
 
-.banner         {       height: 10em;   
+.banner         {       height: 15em;   
                         width: 100%;
 
                         display: flex;
 
                         flex-direction: column;
 
-                        justify-content: center;
+                        justify-content: space-around;
                         align-items: center;  
 
                         margin-top: 5em;
@@ -113,11 +130,13 @@ body            {       height: 100vh;
                         justify-content: center;
                         align-items: center;        
 
-                        padding: 0.85em;            }
+                        padding: 0.85em;            
+
+                        border-radius: 5px;         }
 
 
-
-.forms          {       min-height: 5em;       
+.forms          {       height: 100%;
+                        min-height: 5em;       
                         width: 100%;
 
                         display: flex;
@@ -126,3 +145,134 @@ body            {       height: 100vh;
 
                         justify-content: space-around;
                         align-items: center;        }
+
+
+
+
+.search_bar     {       height: 34px;
+                        min-width: 484px;
+
+                        padding: 0.5em 0.85em;
+
+                        border-radius: 24px;         }
+
+
+.submit_button  {       height: 2.25em;
+                        width: 150px;
+
+                        border-radius: 4px;          }
+
+
+.button_wrap
+                {       width: 30em;
+
+                        display: flex;              
+
+                        flex-direction: row; 
+
+                        justify-content: space-around;
+                        align-items: center;        }
+
+
+
+
+/*  Advanced Search Form  */
+
+
+
+.adv            {       width: 30em;
+
+                        display: flex;              
+
+                        flex-direction: row;     
+
+                        justify-content: space-between;
+                        align-items: center;  
+
+                        margin-bottom: 2.5em;    
+
+                        }
+
+
+.adv_button_wrap
+                {       width: 30em;
+
+                        display: flex;              
+
+                        flex-direction: row; 
+
+                        justify-content: end;
+                        align-items: center;        
+
+
+                        margin-top: 3.5em;      }
+
+
+.as_q   ,
+.as_epq ,
+.as_oq  ,
+.as_eq          {       padding: 0.05em 0.35em;
+
+                        border: none;          
+
+                        color: #bdc1c6;         }
+
+
+
+
+
+
+
+
+
+
+
+.adv_search     {       height: 35em;       
+                        width: 100%;
+
+                        display: flex;
+
+                        flex-direction: column;
+
+                        justify-content: center;
+                        align-items: center;       
+
+                        text-align: left;
+
+                        padding: 0.85em;            
+
+                        border-radius: 1px;         }
+
+
+
+
+
+
+
+
+.adv_forms      {       height: auto;   
+                        width: 100%;
+
+                        display: flex;
+
+                        flex-direction: column;
+
+                        justify-content: center;
+                        align-items: center;                }
+
+
+.adv_submit_button  
+                {       height: 30px;
+                        min-width: 120px;
+
+                        border: 1px solid #3079ed;
+                        border-radius: 2px;      
+
+                        box-shadow: none;
+
+                        font-size: 11px;
+                        font-weight: bold;
+
+                        color: white;
+
+                        background-color: #8ab4f8;      }
